# LibCmd56

./: .gitignore  LibCmd56.sln  LibCmd56.vcxproj  LibCmd56.vcxproj.filters  Makefile  README.md
cmd56/: LibCmd56.vcxproj  LibCmd56.vcxproj.filters  cmd56.c  cmd56.h  cmd56_sm.c  cmd56_sm.h  compiler_defs.h  f00d_emu.c  f00d_emu.h  gc.c  gc.h  log.h  rng.c  rng.h  vita.c  vita.h
cmd56/crypto/: LICENSE  README.md  aes.c  aes.h  aes_cbc.c  aes_cbc.h  aes_cmac.c  aes_cmac.h
test/: Cmd56Test.filters  Cmd56Test.vcxproj  main.c
test_pc/: Cmd56Test.filters  Cmd56Test.vcxproj  main.c
test_vita/: CMakeLists.txt  exports.yml  main.c
